--- a/requirements.txt
+++ b/requirements.txt
@@ -22,12 +22,12 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 jsonpatch==1.33
 jsonpointer==3.0.0
-langchain==0.0.310
-langchain-community==0.0.38
+langchain==0.0.325
+langchain-community==0.0.21
+langsmith==0.0.97
 langchain-core==0.1.53
 langchain-openai==0.0.8
 langchain-pinecone==0.0.3
-langsmith
 MarkupSafe==3.0.2
 marshmallow==3.26.1
 multidict==6.3.2
